users handlers swags fixes
